--- a/cv-sergio-garciaprado.tex
+++ b/cv-sergio-garciaprado.tex
@@ -32,194 +32,172 @@
 
 \begin{document}
 
-\header{Sergio}{GarcíaPrado}{junior computer scientist \faCode} % Your name and current job title/field
+    \header{Sergio}{GarcíaPrado}{junior computer scientist \faCode} % Your name and current job title/field
 
-%----------------------------------------------------------------------------------------
+%-------------------------------------------------------------------------------
 %	SIDEBAR SECTION
-%----------------------------------------------------------------------------------------
+%-------------------------------------------------------------------------------
 
-\begin{aside} % In the aside, each new line forces a line break
+    \begin{aside} % In the aside, each new line forces a line break
 
-    \section{contact}
-        7 3º C, La Paz
-        34004 Palencia
-        Spain
-        ~
-        \href{http://garciparedes.me}{\textbf{garciparedes.me}}
-        ~
-        +34 696 904 878
-        \href{mailto:sergio@garciparedes.me}{sergio@garciparedes.me}
-    \section{social}
-        \href{https://es.linkedin.com/in/garciparedes/en}{LinkedIn\quad\faLinkedin }
-        \href{https://github.com/garciparedes}{\textbf{Github}\quad\faGithub }
-        \href{https://bitbucket.org/garciparedes/}{Bitbucket\quad\faBitbucket }
-        \href{http://stackoverflow.com/users/3921457/garciparedes}{Stack Overflow\quad\faStackOverflow }
-        \href{https://trello.com/garciparedes}{Trello\quad\faTrello }
-        \href{https://telegram.me/garciparedes}{\textbf{Telegram}\quad\faPaperPlane }
-        \href{skype:garciparedes?call}{Skype\quad\faSkype }
-        \href{https://medium.com/@garciparedes}{Medium\quad\faMedium }
-        \href{https://facebook.com/garciparedes}{Facebook\quad\faFacebook}
-        \href{https://twitter.com/garciparedes}{Twitter\quad\faTwitter }
-        \href{https://www.instagram.com/garciparedes/}{Instagram\quad\faInstagram }
-        \href{https://plus.google.com/+SergioGarcia-garciparedes/}{Google +\quad\faGooglePlus }
-        \href{https://www.youtube.com/user/GaRcYpArEdEs/}{Youtube\quad\faYoutubePlay }
-        \href{http://www.last.fm/user/garciparedes/}{Lastfm\quad\faLastfm}
-    \section{languages}
-        spanish bilingual
-        english medium
-    \section{programming}
-        Java\quad{\color{red} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit$}
-        Python\quad{\color{red} $\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit\varheartsuit\varheartsuit$}
-        JavaScript\quad{\color{red} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit\varheartsuit$}
-         C\quad{\color{red} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit\varheartsuit$}
-         C++\quad{\color{red} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit\varheartsuit$}
-    \section{personality}
-        Competitive\quad{\color{blue} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit$}
-        Constant\quad{\color{blue} $\varheartsuit$}{\color{black} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}
-        Dedicated\quad{\color{blue} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit\varheartsuit$}
-        Organized\quad{\color{blue} $\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit\varheartsuit\varheartsuit$}
-        Sincere\quad{\color{blue} $\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit\varheartsuit$}
-\end{aside}
+        \section{contact}
+            7 3º C, La Paz
+            34004 Palencia
+            Spain
+            ~
+            \href{http://garciparedes.me}{\textbf{garciparedes.me}}
+            ~
+            +34 696 904 878
+            \href{mailto:sergio@garciparedes.me}{sergio@garciparedes.me}
+        \section{social}
+            \href{https://es.linkedin.com/in/garciparedes/en}{LinkedIn\quad\faLinkedin }
+            \href{https://github.com/garciparedes}{\textbf{Github}\quad\faGithub }
+            \href{https://bitbucket.org/garciparedes/}{Bitbucket\quad\faBitbucket }
+            \href{http://stackoverflow.com/users/3921457/garciparedes}{Stack Overflow\quad\faStackOverflow }
+            \href{https://trello.com/garciparedes}{Trello\quad\faTrello }
+            \href{https://telegram.me/garciparedes}{\textbf{Telegram}\quad\faPaperPlane }
+            \href{skype:garciparedes?call}{Skype\quad\faSkype }
+            \href{https://medium.com/@garciparedes}{Medium\quad\faMedium }
+            \href{https://facebook.com/garciparedes}{Facebook\quad\faFacebook}
+            \href{https://twitter.com/garciparedes}{Twitter\quad\faTwitter }
+            \href{https://www.instagram.com/garciparedes/}{Instagram\quad\faInstagram }
+            \href{https://plus.google.com/+SergioGarcia-garciparedes/}{Google +\quad\faGooglePlus }
+            \href{https://www.youtube.com/user/GaRcYpArEdEs/}{Youtube\quad\faYoutubePlay }
+            \href{http://www.last.fm/user/garciparedes/}{Lastfm\quad\faLastfm}
+        \section{languages}
+            spanish bilingual
+            english medium
+        \section{programming}
+            Java\quad{\color{red} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit$}
+            Python\quad{\color{red} $\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit\varheartsuit\varheartsuit$}
+            JavaScript\quad{\color{red} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit\varheartsuit$}
+            C\quad{\color{red} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit\varheartsuit$}
+            Latex\quad{\color{red} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit\varheartsuit$}
+            TypeScript\quad{\color{red} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit\varheartsuit$}
+        \section{personality}
+            Competitive\quad{\color{blue} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit$}
+            Constant\quad{\color{blue} $\varheartsuit$}{\color{black} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}
+            Dedicated\quad{\color{blue} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit\varheartsuit$}
+            Organized\quad{\color{blue} $\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit\varheartsuit\varheartsuit$}
+            Sincere\quad{\color{blue} $\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit\varheartsuit$}
+    \end{aside}
 
 
 
-%----------------------------------------------------------------------------------------
+%-------------------------------------------------------------------------------
 %	SUMMARY SECTION
-%----------------------------------------------------------------------------------------
+%-------------------------------------------------------------------------------
 
-\section{summary}
+    \section{summary}
 
+        I'm a student of Computer Engineering with a great desire to learn. I especially like the Computing branch, ie, data structures, algorithms, and everything that has to do with scheduling things. Although I do not close the door to anything.
 
-%------------------------------------------------
+        Currently I've started a personal project (EvaluaMe) with which I am putting into practice the knowledge acquired at university.
 
-I'm a student of Computer Engineering with a great desire to learn. I especially like the Computing branch, ie, data structures, algorithms, and everything that has to do with scheduling things. Although I do not close the door to anything.
+        \noindent\begin{minipage}[t]{0.5\linewidth}
+            \begin{itemize}
+            	\item{Proficient Algorithms}
+        	\item{Data Structures}
+            	\item{Data representation}
+            	\item{Object Oriented Programming}
+            	\item{Android Development}
 
-Currently I've started a personal project (EvaluaMe) with which I am putting into practice the knowledge acquired at university.
+            \end{itemize}
+            \end{minipage}%
+            \begin{minipage}[t]{0.5\linewidth}
+            \begin{itemize}
+            	\item{Multi-Thread Programming}
+            	\item{Distributed Programming}
+           	\item{Version Control Systems (VCS)}
+           	\item{Agile Methodologies}
+            \end{itemize}
+        \end{minipage}\par\bigskip
 
-\noindent\begin{minipage}[t]{0.5\linewidth}
-    \begin{itemize}
-    	\item{Proficient Algorithms}
-	\item{Data Structures}
-    	\item{Data representation}
-    	\item{Object Oriented Programming}
-    	\item{Android Development}
-
-    \end{itemize}
-    \end{minipage}%
-    \begin{minipage}[t]{0.5\linewidth}
-    \begin{itemize}
-    	\item{Multi-Thread Programming}
-    	\item{Distributed Programming}
-   	\item{Version Control Systems (VCS)}
-   	\item{Agile Methodologies}
-    \end{itemize}
-\end{minipage}\par\bigskip
-%------------------------------------------------
+%-------------------------------------------------------------------------------
 
 
-%----------------------------------------------------------------------------------------
+%-------------------------------------------------------------------------------
 %	WORK SECTION
-%----------------------------------------------------------------------------------------
+%-------------------------------------------------------------------------------
 
-\section{work}
+    \section{work}
 
-\begin{entrylist}
+        \begin{entrylist}
 
-%------------------------------------------------
+            \entry
+            {2016}
+            {Brooktec}
+            {Software Developer Internship}
+            {Web development.}
+
+        \end{entrylist}
+
+%-------------------------------------------------------------------------------
 
 
-
-%------------------------------------------------
-
-\end{entrylist}
-
-
-
-%----------------------------------------------------------------------------------------
+%-------------------------------------------------------------------------------
 %	EDUCATION SECTION
-%----------------------------------------------------------------------------------------
+%-------------------------------------------------------------------------------
 
-\section{education}
+    \section{education}
 
-\begin{entrylist}
+        \begin{entrylist}
 
-%------------------------------------------------
+            \entry
+            {2013--Now}
+            {Bachelor's Degree {\normalfont of Computer Science}}
+            {University of Valladolid, Spain}
+            {Specialized in Computation}
 
-\entry
-{2013--Now}
-{Bachelor's Degree {\normalfont of Computer Science}}
-{University of Valladolid, Spain}
-{Specialized in Computation}
+        \end{entrylist}
 
-
-%------------------------------------------------
-
-\end{entrylist}
+%-------------------------------------------------------------------------------
 
 
-%----------------------------------------------------------------------------------------
+%-------------------------------------------------------------------------------
 %	AWARDS SECTION
-%----------------------------------------------------------------------------------------
+%-------------------------------------------------------------------------------
 
-\section{awards}
+    \section{awards}
 
-\begin{entrylist}
+        \begin{entrylist}
 
-%------------------------------------------------
+            \entry
+            {2016}
+            {Codes and Cryptography}
+            {University of Valladolid, Spain}
+            {Score: 10.0/10.0 with Honors.}
 
-\entry
-{2016}
-{Codes and Cryptography}
-{University of Valladolid, Spain}
-{Score: 10.0/10.0 with Honors.}
+            \entry
+            {}
+            {Algorithms and Computing}
+            {University of Valladolid, Spain}
+            {Score: 9.5/10.0 with Honors.}
 
-\entry
-{}
-{Algorithms and Computing}
-{University of Valladolid, Spain}
-{Score: 9.5/10.0 with Honors.}
+            \\
+            \entry
+            {2015}
+            {Operating Systems Structures}
+            {University of Valladolid, Spain}
+            {Score: 9.5/10.0 with Honors.}
 
-\\
-\entry
-{2015}
-{Operating Systems Structures}
-{University of Valladolid, Spain}
-{Score: 9.5/10.0 with Honors.}
+        \end{entrylist}
 
-%------------------------------------------------
+%-------------------------------------------------------------------------------
 
-\end{entrylist}
-\\
-\begin{comment}
-%----------------------------------------------------------------------------------------
-%	TECHNICAL SKILLS SECTION
-%----------------------------------------------------------------------------------------
 
-    \section{technical skills}
-    \hfill
-
-        Java\quad{\color{red} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit$} \\
-
-        Android\quad{\color{red} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit\varheartsuit\varheartsuit$} \\
-
-        Python\quad{\color{red} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit$} \\
-
-        JavaScript\quad{\color{red} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit$} \\
-
-         C\quad{\color{red} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit$} \\
-
-         Latex\quad{\color{red} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}
-
-\end{comment}
-%----------------------------------------------------------------------------------------
+%-------------------------------------------------------------------------------
 %	INTERESTS SECTION
-%----------------------------------------------------------------------------------------
+%-------------------------------------------------------------------------------
 
-\section{interests}
 
-\textbf{professional:} computing problems, data analysis, algorithms, machine learning, design patterns, web design, software design, internet of things \\
-\textbf{personal:} motor sports, rap and classic music, turntablism, cooking, technology
+    \section{interests}
 
+        \textbf{professional:} computing problems, data analysis, algorithms, machine learning, design patterns, web design, software design, internet of things
+
+        \textbf{personal:} motor sports, rap and classic music, turntablism, cooking, technology
+
+%-------------------------------------------------------------------------------
 
 
 \end{document}
