--- a/cv-sergio-garciaprado.tex
+++ b/cv-sergio-garciaprado.tex
@@ -54,32 +54,29 @@
             \href{https://github.com/garciparedes}{\textbf{Github}\quad\faGithub }
             \href{https://bitbucket.org/garciparedes/}{Bitbucket\quad\faBitbucket }
             \href{http://stackoverflow.com/users/3921457/garciparedes}{Stack Overflow\quad\faStackOverflow }
-            \href{https://trello.com/garciparedes}{Trello\quad\faTrello }
             \href{https://telegram.me/garciparedes}{\textbf{Telegram}\quad\faPaperPlane }
             \href{skype:garciparedes?call}{Skype\quad\faSkype }
             \href{https://medium.com/@garciparedes}{Medium\quad\faMedium }
             \href{https://facebook.com/garciparedes}{Facebook\quad\faFacebook}
             \href{https://twitter.com/garciparedes}{Twitter\quad\faTwitter }
             \href{https://www.instagram.com/garciparedes/}{Instagram\quad\faInstagram }
-            \href{https://plus.google.com/+SergioGarcia-garciparedes/}{Google +\quad\faGooglePlus }
-            \href{https://www.youtube.com/user/GaRcYpArEdEs/}{Youtube\quad\faYoutubePlay }
             \href{http://www.last.fm/user/garciparedes/}{Lastfm\quad\faLastfm}
         \section{languages}
             spanish bilingual
             english medium
         \section{programming}
-            Java\quad{\color{red} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit$}
+            Java\quad{\color{red} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $ $}
+            TypeScript\quad{\color{red} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit$}
             Python\quad{\color{red} $\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit\varheartsuit\varheartsuit$}
-            JavaScript\quad{\color{red} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit\varheartsuit$}
-            C\quad{\color{red} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit\varheartsuit$}
+            JavaScript\quad{\color{red} $\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit\varheartsuit\varheartsuit$}
+            C\quad{\color{red} $\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}
             Latex\quad{\color{red} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit\varheartsuit$}
-            TypeScript\quad{\color{red} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit\varheartsuit$}
         \section{personality}
-            Competitive\quad{\color{blue} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit$}
-            Constant\quad{\color{blue} $\varheartsuit$}{\color{black} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}
-            Dedicated\quad{\color{blue} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit\varheartsuit$}
-            Organized\quad{\color{blue} $\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit\varheartsuit\varheartsuit$}
-            Sincere\quad{\color{blue} $\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit\varheartsuit$}
+            Competitive\quad{\color{blue} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $ $}
+            Constant\quad{\color{blue} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit\varheartsuit$}
+            Organized\quad{\color{blue} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit\varheartsuit$}
+            Voluble\quad{\color{blue} $\varheartsuit$}{\color{black} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}
+            Involved\quad{\color{blue} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit$}
     \end{aside}
 
 
@@ -109,7 +106,8 @@
             	\item{Multi-Thread Programming}
             	\item{Distributed Programming}
            	\item{Version Control Systems (VCS)}
-           	\item{Agile Methodologies}
+            \item{Agile Methodologies}
+            \item{Angular 2 Development}
             \end{itemize}
         \end{minipage}\par\bigskip
 
