--- a/cv-sergio-garciaprado.tex
+++ b/cv-sergio-garciaprado.tex
@@ -68,7 +68,7 @@
             Java\quad{\color{red} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $ $}
             TypeScript\quad{\color{red} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit$}
             Python\quad{\color{red} $\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit\varheartsuit\varheartsuit$}
-            JavaScript\quad{\color{red} $\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit\varheartsuit\varheartsuit$}
+            Matlab\quad{\color{red} $\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit\varheartsuit\varheartsuit$}
             C\quad{\color{red} $\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}
             Latex\quad{\color{red} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit\varheartsuit$}
         \section{personality}
