--- a/garciparedes-cv.tex
+++ b/garciparedes-cv.tex
@@ -48,32 +48,15 @@
             \href{mailto:sergio@garciparedes.me}{sergio@garciparedes.me}
         \section{social}
             \href{https://es.linkedin.com/in/garciparedes/en}{LinkedIn\quad\faLinkedin }
-            \href{https://github.com/garciparedes}{\textbf{Github}\quad\faGithub }
-            \href{https://bitbucket.org/garciparedes/}{Bitbucket\quad\faBitbucket }
+            \href{https://github.com/garciparedes}{\quad{\color{red} $\varheartsuit$}\quad\textbf{Github}\quad\faGithub }
             \href{http://stackoverflow.com/users/3921457/garciparedes}{Stack Overflow\quad\faStackOverflow }
             \href{https://telegram.me/garciparedes}{\textbf{Telegram}\quad\faPaperPlane }
             \href{skype:garciparedes?call}{Skype\quad\faSkype }
             \href{https://medium.com/@garciparedes}{Medium\quad\faMedium }
-            \href{https://facebook.com/garciparedes}{Facebook\quad\faFacebook}
-            \href{https://twitter.com/garciparedes}{Twitter\quad\faTwitter }
-            \href{https://www.instagram.com/garciparedes/}{Instagram\quad\faInstagram }
             \href{http://www.last.fm/user/garciparedes/}{Lastfm\quad\faLastfm}
         \section{languages}
             spanish bilingual
             english medium
-        \section{programming}
-            Java\quad{\color{red} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $ $}
-            TypeScript\quad{\color{red} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit$}
-            Python\quad{\color{red} $\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit\varheartsuit\varheartsuit$}
-            Matlab\quad{\color{red} $\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit\varheartsuit\varheartsuit$}
-            C\quad{\color{red} $\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}
-            Latex\quad{\color{red} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit\varheartsuit$}
-        \section{personality}
-            Competitive\quad{\color{blue} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $ $}
-            Constant\quad{\color{blue} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit\varheartsuit$}
-            Organized\quad{\color{blue} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit\varheartsuit$}
-            Voluble\quad{\color{blue} $\varheartsuit$}{\color{black} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}
-            Involved\quad{\color{blue} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit$}
     \end{aside}
 
 
@@ -121,9 +104,9 @@
 
             \entry
             {2016}
+            {Internship}
             {Brooktec}
-            {Software Developer Internship}
-            {Web development.}
+            {Full Stack Developer}
 
         \end{entrylist}
 
