--- a/garciparedes-cv.tex
+++ b/garciparedes-cv.tex
@@ -123,7 +123,7 @@
 
             \entry
             {2013--Now}
-            {Bachelor's Degree {\normalfont of Computer Science}}
+            {Bachelor's Degree {\normalfont of Computer Engineering}}
             {University of Valladolid, Spain}
             {Specialized in Computation}
 
