Added MIO score

--- a/garciparedes-cv.tex
+++ b/garciparedes-cv.tex
@@ -136,10 +136,17 @@
 %	AWARDS SECTION
 %-------------------------------------------------------------------------------
 
-    \section{awards}
+    \section{academic awards}
 
         \begin{entrylist}
 
+            \entry
+            {2017}
+            {Operation Research Models}
+            {University of Valladolid, Spain}
+            {Score: 9.5/10.0 with Honors.}
+
+            \\
             \entry
             {2016}
             {Codes and Cryptography}
