--- a/garciparedes-cv.tex
+++ b/garciparedes-cv.tex
@@ -133,7 +133,7 @@
 
 
 %-------------------------------------------------------------------------------
-%	AWARDS SECTION
+%	ACADEMIC AWARDS SECTION
 %-------------------------------------------------------------------------------
 
     \section{academic awards}
@@ -144,28 +144,59 @@
             {2017}
             {Operation Research Models}
             {University of Valladolid, Spain}
-            {Score: 9.5/10.0 with Honors.}
+            {Score: 9.5/10.0 with Honors}
 
             \\
             \entry
             {2016}
             {Codes and Cryptography}
             {University of Valladolid, Spain}
-            {Score: 10.0/10.0 with Honors.}
+            {Score: 10.0/10.0 with Honors}
 
             \entry
             {}
             {Algorithms and Computing}
             {University of Valladolid, Spain}
-            {Score: 9.5/10.0 with Honors.}
+            {Score: 9.5/10.0 with Honors}
 
             \\
             \entry
             {2015}
             {Operating Systems Structures}
             {University of Valladolid, Spain}
-            {Score: 9.5/10.0 with Honors.}
+            {Score: 9.5/10.0 with Honors}
 
+        \end{entrylist}
+
+%-------------------------------------------------------------------------------
+
+%-------------------------------------------------------------------------------
+%	COURSES SECTION
+%-------------------------------------------------------------------------------
+
+    \section{courses}
+
+        \begin{entrylist}
+
+            \entry
+            {2017}
+            {Scratch Monitor}
+            {FUNGE UVa}
+            {12 hours}
+
+            \\
+            \entry
+            {2016}
+            {SG Academy}
+            {SolidGear}
+            {20 hours}
+
+            \\
+            \entry
+            {2014}
+            {Plastic SCM (Software Control Manager)}
+            {Codice Software}
+            {8 hours}
         \end{entrylist}
 
 %-------------------------------------------------------------------------------
