Added test scores

--- a/garciparedes-cv.tex
+++ b/garciparedes-cv.tex
@@ -51,7 +51,6 @@
             \href{https://github.com/garciparedes}{\quad{\color{red} $\varheartsuit$}\quad\textbf{Github}\quad\faGithub }
             \href{http://stackoverflow.com/users/3921457/garciparedes}{Stack Overflow\quad\faStackOverflow }
             \href{https://telegram.me/garciparedes}{\textbf{Telegram}\quad\faPaperPlane }
-            \href{skype:garciparedes?call}{Skype\quad\faSkype }
             \href{https://medium.com/@garciparedes}{Medium\quad\faMedium }
             \href{http://www.last.fm/user/garciparedes/}{Lastfm\quad\faLastfm}
         \section{languages}
@@ -133,18 +132,36 @@
 
 
 %-------------------------------------------------------------------------------
-%	ACADEMIC AWARDS SECTION
+%	ACADEMIC REMARKS SECTION
 %-------------------------------------------------------------------------------
 
-    \section{academic awards}
+    \section{academic remarks}
 
         \begin{entrylist}
 
             \entry
             {2017}
+            {Parallel Computing}
+            {University of Valladolid, Spain}
+            {Score: 9.9/10.0 with Honors}
+
+            \entry
+            {}
             {Operation Research Models}
             {University of Valladolid, Spain}
             {Score: 9.5/10.0 with Honors}
+
+            \entry
+            {}
+            {Data Mining}
+            {University of Valladolid, Spain}
+            {Score: 9.0/10.0}
+
+            \entry
+            {}
+            {Machine Learning Techniques}
+            {University of Valladolid, Spain}
+            {Score: 9.0/10.0}
 
             \\
             \entry
@@ -159,12 +176,25 @@
             {University of Valladolid, Spain}
             {Score: 9.5/10.0 with Honors}
 
+            \entry
+            {}
+            {Web Services and Systems}
+            {University of Valladolid, Spain}
+            {Score: 9.0/10.0}
+
             \\
             \entry
             {2015}
             {Operating Systems Structures}
             {University of Valladolid, Spain}
             {Score: 9.5/10.0 with Honors}
+
+            \\
+            \entry
+            {2014}
+            {Fundamentals of Computer Networks}
+            {University of Valladolid, Spain}
+            {Score: 9.0/10.0}
 
         \end{entrylist}
 
