Added High School as education

--- a/garciparedes-cv.tex
+++ b/garciparedes-cv.tex
@@ -126,6 +126,13 @@
             {University of Valladolid, Spain}
             {Specialized in Computation}
 
+            \\
+            \entry
+            {2010--2012}
+            {High School {\normalfont of Social Sciences}}
+            {IES Alonso Berruguete, Spain}
+            {}
+
         \end{entrylist}
 
 %-------------------------------------------------------------------------------
