Added statistics degree to cv

--- a/garciparedes-cv.tex
+++ b/garciparedes-cv.tex
@@ -121,7 +121,14 @@
         \begin{entrylist}
 
             \entry
-            {2013--Now}
+            {2017--2019}
+            {Bachelor's Degree {\normalfont of Statistics}}
+            {University of Valladolid, Spain}
+            {}
+
+            \\
+            \entry
+            {2013--2017}
             {Bachelor's Degree {\normalfont of Computer Engineering}}
             {University of Valladolid, Spain}
             {Specialized in Computation}
