--- a/garciparedes-cv.tex
+++ b/garciparedes-cv.tex
@@ -121,7 +121,7 @@
         \begin{entrylist}
 
             \entry
-            {2017--2019}
+            {2017--present}
             {Bachelor's Degree {\normalfont of Statistics}}
             {University of Valladolid, Spain}
             {}
