Improved CV adding work

--- a/garciparedes-cv.tex
+++ b/garciparedes-cv.tex
@@ -102,10 +102,24 @@
         \begin{entrylist}
 
             \entry
+            {2017-present}
+            {Open Source Developer}
+            {TFGraph}
+            {}
+
+            \\
+            \entry
             {2016}
-            {Internship}
-            {Brooktec}
             {Full Stack Developer}
+            {Brooktec}
+            {Internship}
+
+            \\
+            \entry
+            {2015-2016}
+            {Android Developer}
+            {EvaluaMe}
+            {Pet Project}
 
         \end{entrylist}
 
