Added updated description to cv

--- a/garciparedes-cv.tex
+++ b/garciparedes-cv.tex
@@ -32,7 +32,7 @@
 
 \begin{document}
 
-    \header{Sergio}{GarcíaPrado}{junior computer scientist \faCode} % Your name and current job title/field
+    \header{Sergio}{GarcíaPrado}{junior data scientist \faCode} % Your name and current job title/field
 
 %-------------------------------------------------------------------------------
 %	SIDEBAR SECTION
@@ -66,29 +66,36 @@
 
     \section{summary}
 
-        I'm a student of Computer Engineering with a great desire to learn. I especially like the Computing branch, ie, data structures, algorithms, and everything that has to do with scheduling things. Although I do not close the door to anything.
+        Currently, I'm starting a Bachelor's Degree of Statistics at the University of Valladolid. The reason is because of during my Bachelor's Degree of Computer Engineering the mathematical curiosity arose in me. So I think the combination of my previous engineer knowledge with my future scientific learning will be enriching to raise and solve complex problems.
 
-        Currently I've started a personal project (EvaluaMe) with which I am putting into practice the knowledge acquired at university.
+        During my first years of coding I've worked on different projects, related with Android development (like EvaluaMe), TypeScript version of Angular (like D'HondtAnalyzer) or the development of enterprise websites using WordPress (like during my internship at Brooktec).
 
-        \noindent\begin{minipage}[t]{0.5\linewidth}
-            \begin{itemize}
-            	\item{Proficient Algorithms}
-        	\item{Data Structures}
-            	\item{Data representation}
-            	\item{Object Oriented Programming}
-            	\item{Android Development}
+        But, in the last year I focus my work on numerical computation, statistical results, machine learning algorithms and graph problems. Mostly using Python and libraries like NumPy, Pandas or Networkx. Also, during my final degree project of Computer Engineering I have used TensorFlow to start a Graph Library on top of it.
 
-            \end{itemize}
-            \end{minipage}%
-            \begin{minipage}[t]{0.5\linewidth}
-            \begin{itemize}
-            	\item{Multi-Thread Programming}
-            	\item{Distributed Programming}
-           	\item{Version Control Systems (VCS)}
+        \noindent
+        \begin{minipage}[t]{0.5\linewidth}
+          \begin{itemize}
+          	\item{High Performance Algorithms}
+      	    \item{Data Structures}
+            \item{Parallel Programming}
+            \item{Statistical Computation}
+            \item{Data Visualization}
+            \item{Machine Learning Techniques}
+            \item{Graph Theory}
+          \end{itemize}
+        \end{minipage}%
+        \begin{minipage}[t]{0.5\linewidth}
+          \begin{itemize}
+            \item{Code Standards (OOP - Docs - Tests)}
             \item{Agile Methodologies}
-            \item{Angular 2 Development}
-            \end{itemize}
-        \end{minipage}\par\bigskip
+            \item{Version Control Systems (VCS)}
+          	\item{\LaTeX \ Writting}
+            \item{TensorFlow Development}
+            \item{Android Development}
+            \item{Angular Development}
+          \end{itemize}
+        \end{minipage}
+        \par\bigskip
 
 %-------------------------------------------------------------------------------
 
