Fixed minor bugs

--- a/garciparedes-cv.tex
+++ b/garciparedes-cv.tex
@@ -70,7 +70,7 @@
 
         During my first years of coding I've worked on different projects, related with Android development (like EvaluaMe), TypeScript version of Angular (like D'HondtAnalyzer) or the development of enterprise websites using WordPress (like during my internship at Brooktec).
 
-        But, in the last year I focus my work on numerical computation, statistical results, machine learning algorithms and graph problems. Mostly using Python and libraries like NumPy, Pandas or Networkx. Also, during my final degree project of Computer Engineering I have used TensorFlow to start a Graph Library on top of it.
+        But, in the last year I focus my work on numerical computation, statistical results, machine learning algorithms and graph problems. Mostly using Python and libraries like NumPy, Pandas or NetworkX. Also, during my final degree project of Computer Engineering I have used TensorFlow to start a Graph Library on top of it.
 
         \noindent
         \begin{minipage}[t]{0.5\linewidth}
