Changes related with links on CV

--- a/garciparedes-cv.tex
+++ b/garciparedes-cv.tex
@@ -44,7 +44,7 @@
             ~
             \href{http://garciparedes.me}{\textbf{garciparedes.me}}
             ~
-            +34 696 904 878
+            \href{tel:+34 696 904 878}{+34 696 904 878}
             \href{mailto:sergio@garciparedes.me}{sergio@garciparedes.me}
         \section{social}
             \href{https://es.linkedin.com/in/garciparedes/en}{LinkedIn\quad\faLinkedin }
@@ -52,7 +52,7 @@
             \href{http://stackoverflow.com/users/3921457/garciparedes}{Stack Overflow\quad\faStackOverflow }
             \href{https://telegram.me/garciparedes}{\textbf{Telegram}\quad\faPaperPlane }
             \href{https://medium.com/@garciparedes}{Medium\quad\faMedium }
-            \href{http://www.last.fm/user/garciparedes/}{Lastfm\quad\faLastfm}
+            \href{https://www.last.fm/user/garciparedes/listening-report/week}{Lastfm\quad\faLastfm}
         \section{languages}
             spanish bilingual
             english medium
