--- a/garciparedes-cv.tex
+++ b/garciparedes-cv.tex
@@ -109,17 +109,17 @@
         \begin{entrylist}
 
             \entry
-            {2017-present}
+            {2017}
             {Open Source Developer}
             {TFGraph}
-            {}
+            {Final Degree Project (5 months)}
 
             \\
             \entry
             {2016}
             {Full Stack Developer}
             {Brooktec}
-            {Internship}
+            {Internship (4 months)}
 
             \\
             \entry
